# veracode-platform

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCUMENTATION.md  GITLAB_INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  NETWORKING_SUMMARY.md  README.md  SECURITY.md  VAULT_INTEGRATION.md  build.ps1  build.sh
.cargo/: config.toml
.github/workflows/: build.yml  multiplatform.yml  release.yml
fuzz/: Cargo.toml  FUZZING_ANALYSIS.md  IMPROVEMENTS.md  INTERPRETING_RESULTS.md  QUICKSTART.md  README.md  RUN_COMMANDS.md  run_all_fuzz_tests.sh  test_edge_cases.sh
fuzz/fuzz_targets/: fuzz_api_deserializers.rs  fuzz_cli_validators.rs  fuzz_combined.rs  fuzz_datetime.rs  fuzz_html_parser.rs  fuzz_output_parsers.rs  fuzz_validation.rs  fuzz_vault_parsers.rs  fuzz_verascan_validators.rs
veraaudit/: CHANGELOG.md  Cargo.toml  README.md  todo
veraaudit/audit_logs/: audit_log_20251022_022331_UTC.json  audit_log_20251022_034455_UTC.json  audit_log_20251022_231744_UTC.json
veraaudit/benches/: dedup_benchmark.rs
veraaudit/src/: audit.rs  cleanup.rs  cli.rs  credentials.rs  datetime.rs  error.rs  lib.rs  main.rs  output.rs  service.rs  test_utils.rs  validation.rs  vault_client.rs
veracmek/: CHANGELOG.md  Cargo.toml  README.md
veracmek/src/: credentials.rs  main.rs  vault_client.rs
veracode-api/: CHANGELOG.md  Cargo.toml  DEFENSIVE_PROGRAMMING_CHECKLIST.md  LICENSE  README.md
veracode-api/examples/: application_lifecycle.rs  basic_usage.rs  build_lifecycle_example.rs  credentials_example.rs  identity_lifecycle.rs  large_file_upload_example.rs  pipeline_scan_lifecycle.rs  policy_lifecycle.rs  sandbox_lifecycle.rs  sandbox_scan_lifecycle.rs  simple_policy_json.rs  simple_sandbox_policy_json.rs  team_lookup_example.rs  xml_api_workflow_validation.rs
veracode-api/src/: app.rs  build.rs  client.rs  findings.rs  identity.rs  json_validator.rs  lib.rs  pipeline.rs  policy.rs  reporting.rs  sandbox.rs  scan.rs  validation.rs  workflow.rs
verascan/: CHANGELOG.md  Cargo.toml  README.md
verascan/examples/: gitlab_ci_assessment_monitor.yml  gitlab_ci_example.yml  gitlab_issues_example.sh  manual_test_example.rs  test_independent_gitlab.sh  validate_gitlab.rs
verascan/samples/: mysupersecret.txt
verascan/src/: assessment.rs  baseline.rs  cli.rs  credentials.rs  export.rs  filefinder.rs  filevalidator.rs  findings.rs  gitlab.rs  gitlab_client.rs  gitlab_common.rs  gitlab_issues.rs  gitlab_mapping.rs  gitlab_report.rs  gitlab_utils.rs  graphql_client.rs  http_client.rs  lib.rs  main.rs  path_resolver.rs  pipeline.rs  policy.rs  scan.rs  search.rs  test_utils.rs  vault_client.rs
verascan/tests/: proxy_integration_test.rs
