[workspace]
resolver = "2"
members = [
    "veraaudit",
    "veracmek",
    "veracode-api",
    "verascan"
]

[workspace.dependencies]
# Shared dependencies across workspace members
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
