[workspace]
resolver = "2"
members = [
    "veraaudit",
    "veracmek",
    "veracode-api",
    "verascan",
    "fuzz"
]
default-members = [
    "veraaudit",
    "veracmek",
    "veracode-api",
    "verascan"
]

[workspace.dependencies]
# Shared dependencies across workspace members
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

# Profile for running tests with miri
[profile.test]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
lto = true                    # Link-time optimization
codegen-units = 1             # Better optimization
strip = true                  # Strip symbols
panic = "abort"               # Smaller binaries, faster panics

[profile.dev]
overflow-checks = true        # Catch integer overflow in dev
# Miri test configuration
#RUSTFLAGS = "-Zmiri-backtrace=full"
#MIRIFLAGS="-Zmiri-disable-isolation"