[package]
name = "veraaudit"
version = "0.5.9"
edition = "2024"
description = "CLI tool for retrieving and archiving Veracode audit logs using the Reporting REST API"
authors = ["Veracode API Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "veraaudit"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Local dependency
veracode-platform = { path = "../veracode-api", version = "0.6.0" }

# Additional dependencies for CLI functionality
env_logger = "0.11"
log = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
anyhow = "1.0"

# Vault client for secure credential management
vaultrs = "0.7"
backoff = { version = "0.4", features = ["futures", "tokio"] }
url = "2.5"

# Date/time handling for timestamps and date ranges
chrono = "0.4"
chrono-tz = "0.10"

# Service mode scheduling
tokio-cron-scheduler = "0.15"
regex = "1.12.2"

# Fast hashing for log deduplication
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.8"
