[package]
name = "veraaudit"
version = "0.5.11"
edition = "2024"
description = "CLI tool for retrieving and archiving Veracode audit logs using the Reporting REST API"
authors = ["Veracode API Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "veraaudit"
path = "src/main.rs"

[dependencies]
# Use workspace dependencies
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Local dependency
veracode-platform = { path = "../veracode-api", version = "0.7.1" }

# Additional dependencies for CLI functionality
env_logger = "0.11"
log = "0.4"
secrecy = { version = "0.10", features = ["serde"] }
anyhow = "1.0"

# Vault client for secure credential management
vaultrs = "0.7"
backon = "1.3"
url = "2.5"

# Date/time handling for timestamps and date ranges
chrono = "0.4"
chrono-tz = "0.10"

# Service mode scheduling
tokio-cron-scheduler = "0.15"
regex = "1.12.2"

# Fast hashing for log deduplication
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "dedup_benchmark"
harness = false

[features]
disable-miri-isolation = []