[package]
name = "verascan"
version = "0.7.0"
edition = "2024"
authors = ["Fred Nollows <frednollows@gmail.com>"]
description = "A comprehensive Rust client application for the Veracode platform to support pipeline, sandbox and policy scan submission and reporting."
documentation = "https://docs.rs/veracode-platform"
repository = "https://github.com/tastyfrankfurt/veracode-platform"
license = "MIT OR Apache-2.0"
keywords = ["veracode", "security", "platform", "static-analysis", "vulnerability"]
categories = ["scanning", "web-programming::http-client", "development-tools"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
# Defensive programming essentials
indexing_slicing = "deny"              # Prevents direct indexing
fallible_impl_from = "deny"            # Catches failed conversions
wildcard_enum_match_arm = "deny"       # Disallows catch-alls
fn_params_excessive_bools = "warn"     # Flags too many booleans
unwrap_used = "deny"                   # Prevents unwrap() in production
expect_used = "warn"                   # Audit expect() usage
panic = "deny"                         # Prevents panic! in production
must_use_candidate = "warn"            # Prevents the result of a function or the value of a type from being ignored

## INTEGER SAFETY
arithmetic_side_effects = "warn"            # Detects potential overflow
cast_possible_truncation = "warn"      # Lossy numeric casts (u64 -> u32)
cast_sign_loss = "warn"                # Sign loss in casts (i32 -> u32)
cast_possible_wrap = "warn"            # Wrapping casts
cast_precision_loss = "warn"           # Float precision loss

## STRING & MEMORY SAFETY (ADD THESE)
string_slice = "warn"                  # String slicing can panic on UTF-8 boundaries
mem_forget = "deny"                    # Prevents mem::forget abuse
manual_assert = "warn"                 # Suggests assert! over if/panic

## CODE QUALITY (ADD THESE)
missing_errors_doc = "warn"            # Ensures error documentation
missing_panics_doc = "warn"            # Documents panic conditions
missing_safety_doc = "warn"            # Documents unsafe code
doc_markdown = "warn"                  # Enforces markdown in docs

[dependencies]
# Veracode Platform client library
veracode-platform = { path = "../veracode-api", version = "0.7.5" }

# CLI and utilities
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# File operations
glob = "0.3"

# File type detection
infer = "0.19"

# Cryptographic hashing
sha2 = "0.10"

# Regular expressions for HTML parsing
regex = "1.10"

# Date/time handling for GitLab export
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for GitLab vulnerability IDs
uuid = { version = "1.0", features = ["v4"] }

# HTTP client for GitLab API integration  
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }

# URL encoding for GitLab search queries
urlencoding = "2.1"

# URL parsing for GitLab host extraction
url = "2.5"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Security - for secure credential handling
secrecy = { version = "0.10", features = ["serde"] }

# Vault client for secure credential management
vaultrs = "0.7"
backon = "1.3"

[dev-dependencies]
jsonschema = "0.37.1"
wiremock = "0.6"
tokio-test = "0.4"

[features]
disable-miri-isolation = []